app/styles/main.css
/* Space out content a bit */
body {
}

.header {
    min-height: 100px;
    overflow: hidden;
}

.main-nav {
    position: fixed !important;
    width: 100%;
    z-index: 90;
    min-height: 100px;
    background-color: #AB2688;
    color: #FFFFFF;
}

.main-nav a {
    text-decoration: none !important;
    color: inherit;
    display: block;
}

.main-nav .menuitem {
    text-align: center;
    border-right: 1px solid rgb(209, 209, 209);
    cursor: pointer;
    font-size: 30px;
    line-height: 100px;
    width: 33.33%;
}

.main-nav .active {
    background-color: #6A104D;
    color: #FFFFFF;
}

.main-nav .menuitem:hover {
    background-color: #812262;
    color: #FFFFFF;
}

.content {
    padding: 20px;
}

.footer {
    height: 80px;
    background-color: #e6e4e8;
    position: absolute;
    left: 0;
    right: 0;
    bottom: 0;
    padding-top: 20px;
    padding-left: 20px;
}

.amountPicker {
    margin-bottom: 65px;
}

.amountSlider {
    height: 100px;
}

.amountDisplay {
    width: 250px;
    font-size: 30px;
    margin: 20px auto;
}

.amountDisplay input {
    font-size: 30px;
    height: 50px;
    text-align: center;
}

.amountDisplay span {
    font-size: 20px;
}

input[type="range"] {
    -webkit-appearance: none;
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
    width: 100%;
    height: 20px;
    margin: 0;
    border: none;
    padding: 1px 2px;
    border-radius: 14px;
    background-color: #BABABA;
    box-shadow: inset 0 1px 0 0 #bababa, inset 0 -1px 0 0 #bababa;
    -webkit-box-shadow: inset 0 1px 0 0 #bababa, inset 0 -1px 0 0 #bababa;
    outline: none;
}

input[type="range"]::-moz-range-track {
    border: inherit;
    background: transparent;
}

input[type="range"]::-ms-track {
    border: inherit;
    color: transparent;
    background: transparent;
}

input[type="range"]::-ms-fill-lower,
input[type="range"]::-ms-fill-upper {
    background: transparent;
}

input[type="range"]::-ms-tooltip {
    display: none;
}

/* thumb */

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 70px;
    height: 50px;
    border: none;
    border-radius: 12px;
    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #484848), color-stop(100%, #484848));
    background-image: -webkit-linear-gradient(top , #999 0, #484848 100%);
    background-image: linear-gradient(to bottom, #999 0, #484848 100%);
}
input[type="range"]::-moz-range-thumb {
    width: 70px;
    height: 50px;
    border: none;
    border-radius: 12px;
    background-image: linear-gradient(to bottom, #999 0, #484848 100%);
}

input[type="range"]::-ms-thumb {
    width: 70px;
    height: 50px;
    border-radius: 12px;
    border: 0;
    background-image: linear-gradient(to bottom, #999 0, #484848 100%);
}

.investSection {
    height: 800px;
    border-bottom: 3px solid #ebebeb;
}

.investSection.first {
    height: 400px;
}

.investSection.current {
    border: none;
}

.btn-centered {
    border: none;
    font-weight: bold;
    margin: 0 auto;
    display: table;
    background-color: #7b4397;
    border-radius: 4px;
}

.btn-centered:hover {
    background-color: #a321d3;
}

.btn-centered:active {
    background-color: #a321d3;
}

.notificationBar {
    display: block;
    position: fixed;
    top: -100px;
    left: 0;
    height: 100px;
    text-align: center;
    line-height: 100px;
    font-size: 30px;
    background-color: #d847a7;
    color: #FFF;
    z-index: 100;
    width: 100% !important;
}

.fundDetailsContainer {
    width: 100%;
    background-color: #e1e1e1;
    border: 1px solid #707070;
    padding-bottom: 15px;
}

.fundDetailsContainer .h2 {
    text-align: center;
}

.fundDetails {
    margin-right: 20px;
}

.fundsSummary {
    margin-top: 20px;
}

.fundsSummary p {
    font-weight: bold;
}

/* to avoid angular flickering */
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none !important;
}

.selectedFundsContainer {
    padding: 0;
    margin-right: 20px;
    margin-top: 30px;
    margin-bottom: 30px;
}

.selectedFundBox {
    position: relative;
    box-shadow: #f0f0f0 0 0 0 3px inset,#edddf5 2px 3px 0;
    -webkit-box-shadow: #f0f0f0 0 0 0 3px inset,#edddf5 2px 3px 0;
    -moz-box-shadow: #f0f0f0 0 0 0 3px inset,#edddf5 2px 3px 0;
    border: 1px solid #999;
    height: 250px;
    max-width: 22%;
    padding: 20px;
    text-align: center;
    display: inline-block;
    float: right;
    margin-left: 3%;
}

@media (max-width: 1690px) {
    .selectedFundBox .h2 {
        font-size: 22px;
        font-weight: bold;
    }

    .selectedFundBox .h3 {
        font-size: 22px;
    }
}

@media (max-width: 1517px) {
    .selectedFundBox {
        margin-left: 8px;
        max-width: 24%;
    }
}

@media (max-width: 1396px) {
    .selectedFundBox .h2 {
        font-size: 18px;
        font-weight: bold;
    }

    .selectedFundBox .h3 {
        font-size: 18px;
    }
}

@media (max-width: 1000px) {
    .selectedFundBox {
        margin-left: 25px;
        margin-bottom: 25px;
        max-width: 45%;
    }
    .h2 {
        font-size: 20px;
        font-weight: bold;
    }

    .h3 {
        font-size: 20px;
    }
}

@media (max-width: 630px) {
    .selectedFundBox {
        margin-left: 25px;
        margin-bottom: 25px;
        max-width: 92%;
    }
}

.totalFees {
    margin-bottom: 30px;
}

